@@ -1,5 +1,10 @@
 
 
+  13 Jun 2007; kiorky <kiorky@cryptelium.net>
+  -plexus-container-default-1.0_alpha9.ebuild,
+  -plexus-container-default-1.0_alpha10.ebuild:
+  cleanup / not used
+
   02 Jun 2007; kiorky <kiorky@cryptelium.net>
   plexus-container-default-1.0_alpha9.ebuild,
   plexus-container-default-1.0_alpha10.ebuild,
